Projet_GL/src/test/deca/codegen/valid/unprovided/div_conv_float.deca

class A{

  void testAnais(int x){
    return 2.2/0;
  }

}

{
  A a = new A();
  a.testAnais();

}
