Projet_GL/src/test/deca/codegen/invalid/heap_overflow.deca
// Overflow de la pile 

class A {
    A a = new A();
}

{
    A a = new A();
}
